tests/snapshots/examples_fixtures/type_system__failing__129_orphan_constructor_pattern_statement.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/129_orphan_constructor_pattern_statement.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

`Some(...)` looks like a pattern but appears outside `match`.

  examples/type_system/failing/129_orphan_constructor_pattern_statement.flx:1:1
  |
1 | Some(x);
  | ^^^^^^^

Hint:
  Did you mean `match value { Some(x) -> ... }`?
== stdout ==
<not executed>
